--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           dotnet-version: 3.1
       
       - name: Publish .NET Core Project
-        run: dotnet publish UkCovidVaccineTracker.csproj -c Release -o release --nologo
+        run: dotnet publish UkCovidVaccineTracker\UkCovidVaccineTracker.csproj -c Release -o release --nologo
       
       - name: Push wwwroot to Github Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
