--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -15,16 +15,16 @@ jobs:
       - uses: actions/checkout@v2
 
       # Download JSON from GOV.UK
-      - name: Download JSON from GOV.UK.
+      - name: Download JSON from GOV.UK
         uses: carlosperate/download-file-action@v1.0.3
         with:
           file-url:  'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleReceivingFirstDose&metric=cumPeopleReceivingSecondDose&format=json'
           file-name: 'data.json'
           location: './json'
-      - name: Add file
-        run: git add .
-      - name: Commit file
-        run: git commit -m "Auto updating json data"
-      - name: Push file
-        run: git push
-        
+      - name: Add and Commit
+        uses: EndBug/add-and-commit@v6
+        with:
+          add: './json/data.json'
+          author_name: 'Daniel Winfield'
+          author_email: daniel.winfield@outlook.com
+          message: 'Updating json data file'
