--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -27,4 +27,5 @@ jobs:
           add: './json/data.json'
           author_name: 'Daniel Winfield'
           author_email: daniel.winfield@outlook.com
+          branch: 'github-pages'
           message: 'Updating json data file'
