--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -24,6 +24,7 @@ jobs:
           #file-url:  'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleReceivingFirstDose&metric=cumPeopleReceivingSecondDose&format=json'
           file-name: 'data.json'
           location: './json'
+      # Add and commit
       - name: Add and Commit
         uses: EndBug/add-and-commit@v6
         with:
