--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Download JSON from GOV.UK
         uses: carlosperate/download-file-action@v1.0.3
         with:
-          file-url: 'https://coronavirus.data.gov.uk/api/v1/data?filters=areaType=nation&structure=%7B%22date%22:%22date%22,%22cumPeopleVaccinatedFirstDoseByPublishDate%22:%22cumPeopleVaccinatedFirstDoseByPublishDate%22,%22cumPeopleVaccinatedSecondDoseByPublishDate%22:%22cumPeopleVaccinatedSecondDoseByPublishDate%22%7D&format=json'
+          file-url: 'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleVaccinatedFirstDoseByVaccinationDate&metric=cumPeopleVaccinatedSecondDoseByVaccinationDate&format=json'
           #file-url:  'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleReceivingFirstDose&metric=cumPeopleReceivingSecondDose&format=json'
           file-name: 'data.json'
           location: './json'
