--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Download JSON from GOV.UK
         uses: carlosperate/download-file-action@v1.0.3
         with:
-          file-url: 'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleVaccinatedFirstDoseByVaccinationDate&metric=cumPeopleVaccinatedSecondDoseByVaccinationDate&format=json'
+          file-url: 'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleVaccinatedFirstDoseByPublishDate&metric=cumPeopleVaccinatedSecondDoseByPublishDate&format=json'
+          #file-url: 'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleVaccinatedFirstDoseByVaccinationDate&metric=cumPeopleVaccinatedSecondDoseByVaccinationDate&format=json'
           #file-url:  'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleReceivingFirstDose&metric=cumPeopleReceivingSecondDose&format=json'
           file-name: 'data.json'
           location: './json'
