--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -1,7 +1,11 @@
 name: Download-JSON
 on:
+  push:
+    branches: [ github-pages ]
+  pull_request:
+    branches: [ github-pages ]
   schedule:
-    - cron: '0 6,9,12,15,18,21 * * *'
+    - cron: '0 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,10 +25,9 @@ jobs:
         uses: carlosperate/download-file-action@v1.0.3
         with:
           file-url: 'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleVaccinatedFirstDoseByPublishDate&metric=cumPeopleVaccinatedSecondDoseByPublishDate&format=json'
-          #file-url: 'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleVaccinatedFirstDoseByVaccinationDate&metric=cumPeopleVaccinatedSecondDoseByVaccinationDate&format=json'
-          #file-url:  'https://api.coronavirus.data.gov.uk/v2/data?areaType=overview&metric=cumPeopleReceivingFirstDose&metric=cumPeopleReceivingSecondDose&format=json'
           file-name: 'data.json'
           location: './json'
+      
       # Add and commit
       - name: Add and Commit
         uses: EndBug/add-and-commit@v6
