--- a/.github/workflows/download-json.yml
+++ b/.github/workflows/download-json.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ github-pages ]
   schedule:
-    - cron: '0 * * * *'
+    - cron: '*/15 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
